Fix error found by @RaphaLevy

--- a/4 periodo/Abtract_of_Titica.tex
+++ b/4 periodo/Abtract_of_Titica.tex
@@ -746,7 +746,7 @@ o p-valor vale $1 - T(u; n-1)$.
 
 \section*{Aula 19: Teste t II}\label{s19}
 \begin{theorem}[Teste pareado]
-Sejam amostras \textbf{X} e \textbf{Y} (antes e depois), tais que $X_i \sim \mathrm{Normal}(\mu_1, \sigma^2)$ e $Y_i \sim \mathbb{Normal}(\mu_2, \sigma^2)$, a hipótese
+Sejam amostras \textbf{X} e \textbf{Y} (antes e depois), tais que $X_i \sim \mathrm{Normal}(\mu_1, \sigma^2)$ e $Y_i \sim \mathrm{Normal}(\mu_2, \sigma^2)$, a hipótese
 
 $$H_0 : \mu_1 \leq \mu_2$$
 $$H_1 : \mu_1 > \mu_2$$
