Rename abstract related to #13

--- a/4 periodo/Inferencia_estatistica.tex
+++ b/4 periodo/Inferencia_estatistica.tex
@@ -27,8 +27,8 @@
 \newtheorem{lemma}[theorem]{Lema}
 \newtheorem{definition}{Definição}
 
-\newcommand{\assignment}{Abstract of Titica}
-\newcommand{\duedate}{November 7, 2021}
+\newcommand{\assignment}{Abstract of statistical inference}
+\newcommand{\duedate}{November 18, 2021}
 
 
 % \renewcommand\thesubsection{\arabic{subsection}}
